# AIM-Chat

./: README.md
GoImageServer/cmd/avatarserver/: main.go
GoImageServer/internal/config/: config.go
GoImageServer/internal/server/: grpc.go  http.go
GoImageServer/internal/service/: avatar.go
GoImageServer/internal/storage/: filestore.go
GoMailServer/cmd/mailserver/: main.go
GoMailServer/internal/config/: config.go
GoMailServer/internal/mailer/: smtp.go
GoMailServer/internal/server/: grpc.go
GoMailServer/internal/store/: codestore.go
IMServer/: AgentGrpcClient.cpp  AgentGrpcClient.h  BinaryReader.cpp  BinaryReader.h  CMakeLists.txt  ClientSession.cpp  ClientSession.h  Field.cpp  Field.h  IMSer.cpp  IMSer.h  IMServer.cpp  IMServer.h  IMTestClient.cpp  MsgCacheManager.cpp  MsgCacheManager.h  MySqlManager.cpp  MySqlManager.h  QueryResult.cpp  QueryResult.h  UserManager.cpp  UserManager.h  agent.proto  im.proto  mysqltool.cpp  mysqltool.h
goagent/: go.mod  go.sum
goagent/cmd/agent/: main.go
goagent/internal/config/: config.go
goagent/internal/llm/: empty_provider.go  provider.go
goagent/internal/server/: http.go
goagent/internal/service/: agent_service.go
goagent/pkg/pb/: agent.pb.go  agent_grpc.pb.go
